--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "editorjs-alert",
-  "version": "1.0.3",
-  "description": "Editor.js tool for adding colorful alerts",
+  "name": "editorjs-summary",
+  "version": "1.0.0",
+  "description": "Editor.js tool for adding colorful summarys",
   "main": "./dist/bundle.js",
   "scripts": {
     "build": "webpack --mode production",
@@ -20,7 +20,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/vishaltelangre/editorjs-alert.git"
+    "url": "git+https://github.com/liruixue/editorjs-summary.git"
   },
   "keywords": [
     "editorjs",
@@ -29,16 +29,16 @@
     "codex",
     "codex editor",
     "codex.editor",
-    "alert",
+    "summary",
     "info message",
     "note"
   ],
   "author": "Vishal Telangre",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/vishaltelangre/editorjs-alert/issues"
+    "url": "https://github.com/liruixue/editorjs-summary/issues"
   },
-  "homepage": "https://github.com/vishaltelangre/editorjs-alert",
+  "homepage": "https://github.com/liruixue/editorjs-summary",
   "devDependencies": {
     "@babel/core": "^7.10.5",
     "@babel/preset-env": "^7.10.4",
